# sharky_vm

./: .gitignore  Cargo.toml  README.md
.VSCodeCounter/2026-05-30_12-30-23/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-05-31_16-31-17/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-06-01_09-31-09/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
chum_design/: main.chum
jaw_design/: main.jaw
src/: app.rs  bytecode_reader.rs  collections.rs  data_types.rs  ffi.rs  ffi_collections.rs  instructions.rs  lib.rs  main.rs  sharky_app.rs  sharky_data_types.rs  sharky_instruction_set.rs  sharky_memory.rs  sharky_native.rs  sharky_string.rs  sharky_vm.rs  vm.rs
src/sharky_vm/: sharky_vm_macros.rs
src/vm/: vm_macros.rs
test_native/: build.py  test_lib.rmra
