[package]
name = "sharky_vm"
version = "0.1.0"
edition = "2024"

[dependencies]
sharky_env = {git = "https://github.com/jdaley-dev/sharky_env.git"}
derive_more = {version = "1", features = ["from", "into", "try_into"]}
libloading = "0.8"
parking_lot = {version = "0.12", features=["deadlock_detection"]}
slab = "0.4"